--- a/hyde-2.1.0/_config.yml
+++ b/hyde-2.1.0/_config.yml
@@ -13,7 +13,7 @@ title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              http://hyde.getpoole.com
-baseurl:          https://elizasviel.github.io/
+baseurl:          https://elizasviel.github.io/hyde-2.1.0/
 
 author:
   name:           'Mark Otto'
