--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,18 @@
 # Dependencies
-markdown:         kramdown
+markdown:         redcarpet
 highlighter:      pygments
-plugins:
-  - jekyll-paginate
-  - jekyll-gist
 
 # Permalinks
 permalink:        pretty
+relative_permalinks: true
 
 # Setup
 title:            Hyde
 tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              http://hyde.getpoole.com
-baseurl:          /elizasviel.github.io/
+baseurl:          /
+
 author:
   name:           'Mark Otto'
   url:            https://twitter.com/mdo
