--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ url:              http://hyde.getpoole.com
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Norman Qian'
+  url:            http://twitter.com/normanqian
 
 paginate:         5
 
