--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      pygments
 permalink:        pretty
 
 # Setup
-title:            Norman Qian
+title:            https://scontent-lga3-2.xx.fbcdn.net/v/t1.6435-9/79941153_2588043301313045_5936260293360353280_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=ZWgf6iGFQaMAX9OwN1q&tn=y6pBFxAINEtrSq5v&_nc_ht=scontent-lga3-2.xx&oh=00_AT9NP_uEqJbjE5N86S_y4VApW1FJInVCXU-x1j44s42DfQ&oe=6287C122
 tagline:          'A Jekyll theme'
 description:      'Norman Qian'
 url:              http://hyde.getpoole.com
