--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink:        pretty
 
 # Setup
 title:            Norman Qian
-tagline:          'A Jekyll theme'
+tagline:          'Personal Website'
 description:      'Norman Qian'
-url:              http://hyde.getpoole.com
+url:              http://normanqian.com
 baseurl:          /
 
 author:
