--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "predeploy" : "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@netlify/functions": "^2.7.0",
