--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build && cp -r build/client/index.html",
+    "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
-    "predeploy": "npm run build",
+    "predeploy" : "npm run build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
@@ -19,11 +19,9 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "framer-motion": "^11.2.10",
-    "gh-pages": "^6.1.1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "save-dev": "^0.0.1-security"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
